--- a/buildspec.yml
+++ b/buildspec.yml
@@ -7,6 +7,7 @@ phases:
   pre_build:
     commands:
       - echo Nothing to do in the pre_build phase...
+      - aws ecr get-login-password --region us-east-1 | docker login --username AWS --password-stdin 140042960823.dkr.ecr.us-east-1.amazonaws.com
   build:
     commands:
       - echo Build started on `date`
